# FutureOSS

./: .dockerignore  .gitignore  .pid  .pylintrc  AGENTS.md  CODE_VERIFICATION_REPORT.md  Dockerfile  FATAL_FIXES_REPORT.md  LICENSE  PLUGIN_USE_GUIDE.md  README.md  RELEASE_v1.1.0.md  SYSTEM_DEPS_GUIDE.md  ai.md  docker-compose.yml  future-oss.7z  main.py  oss.config.json  pyproject.toml  pytest.ini  requirements.txt  start.bat  start.sh  system-dependencies.json  test_core_functionality.py  test_fixes.py  项目的后续计划.md
.github/workflows/: ci.yml
data/DCIM/: html-render-config.json
docs/api/: http-api.md
docs/dev/: contributing.md
docs/guide/: architecture.md  getting-started.md
docs/plugins/: development.md  list.md
future_oss.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
oss/: __hidden__.py  __init__.py  cli.py  easter_eggs.py
oss/config/: __init__.py  config.py
oss/core/: __init__.py  achievements.py  context.py
oss/logger/: logger.py
oss/plugin/: __init__.py  base.py  capabilities.py  loader.py  manager.py  types.py
oss/plugins/: auto_dependency.py  firewall.json  firewall.py  frp_proxy.py  ftp_server.json  ftp_server.py  multi_lang_deploy.py  ops_toolbox.py  security_gateway.py
oss/shared/: __init__.py  (+1 more)
tests/: test_cli.py  test_config.py  test_plugin_loader.py  test_plugin_manager.py  test_rate_limiter.py  test_security_improvements.py
tools/: sign_core_plugins.py  sign_plugin_loader.py  sign_plugins.py  sign_single_plugin.py  test_signature.py
video/: architecture.html  index.html  intro.html  plugin-demo.html
website/: architecture.html  features.html  index.html  package-lock.json  package.json  plugins.html  quickstart.html  sitemap.xml  update.php
(+469 files in other folders)
