[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nebulashell"
version = "1.2.0"
description = "NebulaShell - 一切皆为插件的开发者工具运行时框架"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
oss = "oss.cli:main"

[tool.setuptools.packages.find]
include = ["oss*"]

[tool.pytest.ini_options]
testpaths = ["oss/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
