[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "future-oss"
version = "1.2.0"
description = "NebulaShell - 一切皆为插件的开发者工具运行时框架"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.scripts]
oss = "oss.cli:main"

[tool.setuptools.packages.find]
include = ["oss*"]
