[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula-shell"
version = "1.2.0"
description = "NebulaShell - 一切皆为插件的开发者工具运行时框架"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8,<9.0",
    "pyyaml>=6.0.2,<7.0",
    "websockets>=13.1,<14.0",
    "psutil>=6.1.0,<8.0",
    "cryptography>=43.0.0,<45.0",
]

[project.scripts]
nebula = "oss.cli:main"
oss = "oss.cli:main"

[tool.setuptools.packages.find]
include = ["oss*"]
